# nemo

./: Cargo.toml  index.html
.github/workflows/: deploy.yml  docker.yml
docker/: Dockerfile
src/: lib.rs
ui/: app.slint
